[package]
name = "nuvs_rust"
version = "0.1.0"
edition = "2021"
authors = ["Blake Smith <blakeinvictoria@gmail.com>"]

[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
flate2 = "1.0"

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

