[tool.poetry]
name = "workflow-nuvs"
version = "0.0.0"
description = "A workflow for identifying novel viruses in Virtool."
authors = [
    "Ian Boyes",
    "Reece Hoffmann",
    "Blake Smith",
    "Tiansheng Sui",
    "Elizabeth Roberts",
    "Markus Swoveland",
    "Christine Wong Chong",
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"
virtool-workflow ={version = "^6.0.0a10", allow-prereleases = true}
rust = "^0.1.1"
nuvs-rust = {path = "target/wheels/nuvs_rust-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pydantic-factories = "^1.17.0"
pytest = "^7.0.0"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.3"
pytest-xdist = "^2.3.0"
ruff = "^0.1.14"
syrupy = "^4.6.0"
pytest-mock = "^3.12.0"


[tool.poetry.group.rust.dependencies]
maturin = "^1.4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["poetry-core>=1.0.0","maturin>=1.4.0,<2.0.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
