[tool.poetry]
name = "workflow-nuvs"
version = "0.0.0"
description = "A workflow for identifying novel viruses in Virtool."
authors = [
    "Ian Boyes",
    "Reece Hoffmann",
    "Blake Smith",
    "Tiansheng Sui",
    "Elizabeth Roberts",
    "Markus Swoveland",
    "Christine Wong Chong",
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"
virtool-workflow = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pydantic-factories = "^1.17.0"
pytest = "^7.0.0"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.12.0"
ruff = "^0.1.14"
syrupy = "^4.6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.maturin]
python-source = "python"
