[project]
name = "workflow-nuvs"
version = "0.0.0"
description = "A workflow for identifying novel viruses in Virtool."
authors = [
    {name="Ian Boyes"},
    {name="Reece Hoffmann"},
    {name="Blake Smith"},
    {name="Tiansheng Sui"},
    {name="Elizabeth Roberts"},
    {name="Markus Swoveland"},
    {name="Christine Wong Chong"},
]
license = "MIT"
requires-python = ">=3.12.3,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
virtool-workflow = { git = "https://github.com/virtool/virtool-workflow.git", rev="7.1.4" }

[tool.poetry.group.dev.dependencies]
pydantic-factories = "^1.17.0"
pytest = "^8.4.0"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.12.0"
ruff = "^0.11.13"
syrupy = "^4.6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.maturin]
python-source = "python"
